--- a/styles.css
+++ b/styles.css
@@ -124,9 +124,12 @@
 
   /* Movile menu desplegable */ 
   .mobile-menu {
+    width: 100%;
     padding: 24px;
     position: absolute;
     top: 60px;
+    left: 0;
+    background-color: white;
   }
   .mobile-menu a {
     text-decoration: none;
@@ -155,14 +158,14 @@
   }
 
   /* CARRITO */
-  .product-detail {
+  .product-detail-overflow {
     width: 360px;
     padding: 24px;
     box-sizing: border-box;
     position: absolute;
     right: 0;
     background-color: #f1f1f1;
-    margin: 61px 0px;
+    
   }
   .title-container {
     display: flex;
@@ -276,6 +279,72 @@
     color: var(--very-light-pink);
   }
 
+  /* */
+  .product-detail {
+    width: 360px;
+    padding-bottom: 24px;
+    position: absolute;
+    right: 15px;
+  }
+  .product-detail-close {
+    background: var(--white);
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+  }
+  .product-detail-close:hover {
+    cursor: pointer;
+  }
+  .product-detail > img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+  }
+  .product-info-detail {
+    margin: 24px 24px 0 24px;
+  }
+  .product-info-detail p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+  }
+  .product-info-detail p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+  }
+  .product-info-detail p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 36px;
+  }
+  .primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+  }
+  .add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+
 
 
   @media (max-width: 640px) {
@@ -291,7 +360,7 @@
     .desktop-menu{
       display: none;
     }
-    .product-detail {
+    .product-detail-overflow{
       width: 100%;
     }
     .cards-container {
@@ -303,6 +372,9 @@
     .product-card img {
       width: 140px;
       height: 140px;
+    }
+    .product-detail {
+      width: 100%;
     }
   
   }
